<resources>
    <string name="app_name">SmartAlarm</string>
    <string name="test">我是假的</string>
    <string name="finish">完成</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="dialog_title">提示</string>

    <string name="add_alarm_repeat">重复</string>
    <string name="add_alarm_voice">铃声</string>
    <string name="add_alarm_vibrate">响铃方式</string>
    <string name="add_alarm_note">备注</string>
    <string name="activity_add_alarm_back">是否放弃所做修改？</string>
    <string name="activity_add_alarm_voice">默认铃声</string>
    <string name="activity_add_alarm_et">闹钟备注</string>
    <string name="activity_add_alarm">添加闹钟</string>
    <string name="time_out">时间到了</string>


    <string-array name="strings_vibrate">
        <item>仅响铃</item>
        <item>响铃并振动</item>
    </string-array>

    <string-array name="strings_repeat">
        <item>每天</item>
        <item>只响一次</item>
        <item>法定工作日（智能跳过节假日）</item>
        <item>法定节假日（智能跳过工作日）</item>
        <item>周一至周五</item>
        <item>自定义</item>
    </string-array>

   <string name="language">语言选择</string>
   <string name="people">发音人选择</string>
   <string name="speech_set_people">发音人</string>
   <string name="speech_set_language">语言</string>
   <string name="speech_set_accept">方言</string>
   <string name="speech_set_speed">语速</string>
   <string name="speech_set_volume">音量</string>
   <string name="speech_set_pitch">语调</string>
   <string name="speech_set_sample_rate">音频采样率</string>
   <string name="speech_set_special">发音人特征</string>

    <string-array name="voicer_cloud_entries">
        <item>小燕—女青、中英、普通话</item>
        <item>小宇—男青、中英、普通话</item>
        <item>凯瑟琳—女青、英</item>
        <item>亨利—男青、英</item>
        <item>玛丽—女青、英</item>
        <item>小研—女青、中英、普通话</item>
        <item>小琪—女青、中英、普通话</item>
        <item>小峰—男青、中英、普通话</item>
        <item>小梅—女青、中英、粤语</item>
        <item>小莉—女青、中英、台湾普通话</item>
        <item>小蓉—女青、中、四川话</item>
        <item>小芸—女青、中、东北话</item>
        <item>小坤—男青、中、河南话</item>
        <item>小强—男青、中、湖南话</item>
        <item>小莹—女青、中、陕西话</item>
        <item>小新—男童、中、普通话</item>
        <item>楠楠—女童、中、普通话</item>
        <item>老孙—男老、中、普通话</item>
    </string-array>
    <string-array name="voicer_cloud_values">
        <item>xiaoyan</item>
        <item>xiaoyu</item>
        <item>catherine</item>
        <item>henry</item>
        <item>vimary</item>
        <item>vixy</item>
        <item>xiaoqi</item>
        <item>vixf</item>
        <item>xiaomei</item>
        <item>xiaolin</item>
        <item>xiaorong</item>
        <item>xiaoqian</item>
        <item>xiaokun</item>
        <item>xiaoqiang</item>
        <item>vixying</item>
        <item>xiaoxin</item>
        <item>nannan</item>
        <item>vils</item>
    </string-array>
    <string-array name="model">
        <item>闹钟</item>
        <item>天气</item>
    </string-array>


    <string name="dot"> • </string>
    <string name="weather_forecast">15天趋势预报</string>
</resources>
